{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 858,
  "lineage": "c1f9f863-2523-99ed-60ab-9da293b225ec",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341510224:vpc/vpc-092854421ecb68a89",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f2e21d612d8d358b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-062aeb532ab32e1da",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092854421ecb68a89",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0018fe4a963d30af3",
            "owner_id": "961341510224"
          }
        }
      ]
    },
    {
      "module": "module.ec2_backend",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e449927258d45bc4",
            "arn": "arn:aws:ec2:us-east-1:961341510224:instance/i-0607c4f395f17e0af",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "RaabtaNow-ec2-ssm-profile",
            "id": "i-0607c4f395f17e0af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e9d2fd5ff7b1763e",
            "private_dns": "ip-172-31-94-223.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.94.223",
            "public_dns": "ec2-54-86-240-169.compute-1.amazonaws.com",
            "public_ip": "54.86.240.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Project": "RaabtaNow"
                },
                "tags_all": {
                  "Project": "RaabtaNow"
                },
                "throughput": 125,
                "volume_id": "vol-0114c48b207332264",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "RaabtaNow-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b610b436c728631",
            "tags": {
              "Name": "RaabtaNow-ec2-instance"
            },
            "tags_all": {
              "Name": "RaabtaNow-ec2-instance",
              "Project": "RaabtaNow"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d22e203973f1d0fa"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.al2023_ami",
            "data.aws_vpc.default",
            "module.cognito.aws_cognito_user_group.groups",
            "module.cognito.aws_cognito_user_pool.this",
            "module.cognito.aws_cognito_user_pool_client.app",
            "module.ec2_backend.aws_iam_instance_profile.ssm_profile",
            "module.ec2_backend.aws_iam_role.ssm_role",
            "module.ec2_backend.aws_security_group.backend_sg",
            "module.rds.aws_db_instance.this",
            "module.rds.aws_db_subnet_group.this",
            "module.rds.aws_security_group.rds",
            "module.rds.data.aws_subnets.default",
            "module.rds.data.aws_vpc.default",
            "module.rds.random_password.rds"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_backend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341510224:security-group/sg-0d22e203973f1d0fa",
            "description": "Allow SSH (22) and HTTP (3000)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d22e203973f1d0fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Backend HTTP",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "RaabtaNow-ec2-sg",
            "name_prefix": "",
            "owner_id": "961341510224",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RaabtaNow-ec2-sg"
            },
            "tags_all": {
              "Name": "RaabtaNow-ec2-sg",
              "Project": "RaabtaNow"
            },
            "timeouts": null,
            "vpc_id": "vpc-092854421ecb68a89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.cognito.aws_cognito_user_group.groups",
            "module.cognito.aws_cognito_user_pool.this",
            "module.cognito.aws_cognito_user_pool_client.app",
            "module.rds.aws_db_instance.this",
            "module.rds.aws_db_subnet_group.this",
            "module.rds.aws_security_group.rds",
            "module.rds.data.aws_subnets.default",
            "module.rds.data.aws_vpc.default",
            "module.rds.random_password.rds"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341510224:vpc/vpc-092854421ecb68a89",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f2e21d612d8d358b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-062aeb532ab32e1da",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092854421ecb68a89",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0018fe4a963d30af3",
            "owner_id": "961341510224"
          }
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961341510224:security-group/sg-093d68d43f062d116",
            "description": "Allow PostgreSQL inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093d68d43f062d116",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "raabtanow-rds-sg",
            "name_prefix": "",
            "owner_id": "961341510224",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "raabtanow-rds-sg",
              "Project": "RaabtaNow"
            },
            "tags_all": {
              "Name": "raabtanow-rds-sg",
              "Project": "RaabtaNow"
            },
            "timeouts": null,
            "vpc_id": "vpc-092854421ecb68a89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rds.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}